# solopdf-cli

./: .gitignore  API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  INSTALL.md  LICENSE  README.md  RELEASE_GUIDE.md  eslint.config.js  jest.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: build-binaries.yml  ci.yml  publish.yml
artifacts/binary-darwin-arm64/: package.json
artifacts/binary-darwin-x64/: package.json
artifacts/binary-linux-x64-gnu/: package.json
artifacts/binary-win32-x64-msvc/: package.json
artifacts/solopdf-cli-package/rust-core/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
artifacts/solopdf-cli-package/rust-core/src/: sign.rs  test_utils.rs
artifacts/solopdf-cli-package/rust-core/src/crypto/: mod.rs  signer.rs
node-wrapper/: .eslintignore  .npmignore  README.md  TEST SIGNATURE  Test Watermark  eslint.config.mjs  jest.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
node-wrapper/rust-core/: index.d.ts  index.js
node-wrapper/src/: index.ts  platform-loader.ts
rust-core/: .napirc  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
rust-core/.cargo/: config.toml
rust-core/src/: lib.rs  page-count-old.rs  page-count.rs  page_count_tests.rs  sign-old.rs  sign.rs  sign_tests.rs  test_utils.rs
rust-core/src/crypto/: key_manager.rs  verifier.rs
rust-core/tests/: integration_tests.rs  page_count_tests.rs  sign_tests.rs
scripts/: build-and-publish.sh  build-platform-packages.sh  build-windows-binary.sh  final-build-test.sh  github-actions-readiness.sh  integrate-platform-binaries.sh  publish.sh  quick-check.sh  setup-execution-env.mjs  test-builds.sh  test-cross-platform.sh  test-github-actions.sh  test-pipeline.sh  validate-all.sh  validate-for-publish.sh  validate-pre-publish.sh
src/: index.ts
(+14 files in other folders)
