[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["crypto"]
test-utils = []
crypto = ["ring", "base64", "chrono"]

[dependencies]
lopdf = "0.36.0"
napi = { version = "3.1.3", features = ["napi6"] }
napi-derive = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For cryptographic signing (optional for cross-compilation)
ring = { version = "0.17.8", optional = true }
base64 = { version = "0.22.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3.12.0"
pdf-writer = "0.11.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "generate_test_pdfs"
path = "src/bin/generate_test_pdfs.rs"